respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Leseer or Owner Vehicle</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles (Supplier Leseer or Owner Vehicle)</relationshipLabel>
        <relationshipName>Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_for_SCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account for (SCP)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ano__c</fullName>
        <label>Año</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asegura_Responsabilidad_Civil__c</fullName>
        <label>Asegura Responsabilidad Civil</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caja_Remolque_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caja / Remolque 2</label>
        <referenceTo>Caja_Remolque__c</referenceTo>
        <relationshipLabel>Vehicles (Caja / Remolque)</relationshipLabel>
        <relationshipName>Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caja_Remolque__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caja / Remolque 1</label>
        <referenceTo>Caja_Remolque__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color_Caja__c</fullName>
        <label>Color Caja</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Tracto__c</fullName>
        <label>Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuracion_Vehicularcat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuración Vehicular</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Configuracion Autotransporte</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Vehicles (Configuración Vehicular)</relationshipLabel>
        <relationshipName>Vehicles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipo Unidad</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Address__c</fullName>
        <label>Last Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Location_Time__c</fullName>
        <label>Last Location Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Location__c</fullName>
        <label>Last Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modelo__c</fullName>
        <label>Modelo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Aseguradora__c</fullName>
        <description>Expresa el nombre de la aseguradora que cubre los riesgos del autotransporte utilizado para el traslado de los bienes o mercancías.</description>
        <inlineHelpText>Expresa el nombre de la aseguradora que cubre los riesgos del autotransporte utilizado para el traslado de los bienes o mercancías.</inlineHelpText>
        <label>Asegura Carga</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_Placa_Caja_2__c</fullName>
        <label>Num Placa Caja 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Placa_Caja__c</fullName>
        <label>Num Placa Caja 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Placa_Tracto__c</fullName>
        <label>Num Placa Tracto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Serie__c</fullName>
        <label>Num Serie</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Eco__c</fullName>
        <label>Numero Eco</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Poliza_Seguro__c</fullName>
        <description>Registra el número de póliza asignado por la aseguradora, que cubre los riesgos del autotransporte utilizado para el traslado de los bienes o mercancías.</description>
        <inlineHelpText>Registra el número de póliza asignado por la aseguradora, que cubre los riesgos del autotransporte utilizado para el traslado de los bienes o mercancías.</inlineHelpText>
        <label>Poliza Carga</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_Permiso_SCT__c</fullName>
        <label>Numero de Permiso SCT</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operadores_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operadores</label>
        <referenceTo>Operadores__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Poliza_Responsabilidad_civil__c</fullName>
        <label>Poliza Responsabilidad civil</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poliza_Seguro_Medio_Ambiente__c</fullName>
        <label>Poliza Seguro Medio Ambiente</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prima_Seguro__c</fullName>
        <label>Prima Seguro</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_Medio_Ambiente__c</fullName>
        <label>Nombre Seguro Medio Ambiente</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Caja__c</fullName>
        <label>Tipo de Caja</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Permiso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipo de Permiso</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tipo de Permiso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Vehicles (Tipo de Permiso)</relationshipLabel>
        <relationshipName>Vehicles2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_de_RemolqueCat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tipo de Remolque</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tipo de Remolque</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Unidad__c</fullName>
        <label>Tipo de Unidad</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehiculo_Validado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check para saber si el vehículo está disponible para uso</description>
        <label>Vehículo Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vigencia_de_Poliza__c</fullName>
        <label>Vigencia de Póliza</label>
        <type>Date</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operadores_del__c</columns>
        <columns>Tipo_de_Unidad__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VH001</fullName>
        <active>true</active>
        <description>Debe de ser un valor Numérico</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Prima_Seguro__c)),

NOT(REGEX(Prima_Seguro__c, &quot;^[0-9]+$&quot;))
)</errorConditionFormula>
        <errorDisplayField>Prima_Seguro__c</errorDisplayField>
        <errorMessage>VH001 - El valor de Prima Seguro debe de ser un valor Numérico.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VH002</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Num_Placa_Tracto__c)),

NOT(REGEX(Num_Placa_Tracto__c, &quot;^[a-zA-Z0-9]+$&quot;))

)</errorConditionFormula>
        <errorDisplayField>Num_Placa_Tracto__c</errorDisplayField>
        <errorMessage>VH002 - Solo se pueden poner letras y numeros en la placa.</errorMessage>
    </validationRules>
</CustomObject>